--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
+    "@react-native-community/viewpager": "^5.0.11",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "@react-navigation/stack": "^6.3.20",
     "bootstrap": "^5.3.2",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
@@ -17,7 +21,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-gesture-handler": "^2.13.4",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-reanimated": "^3.5.4",
+    "react-native-safe-area-context": "^4.7.4",
+    "react-native-screens": "^3.27.0",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
